# bevy_steam_audio

./: .gitignore  Cargo.toml  readme.md
.github/: FUNDING.yml
.github/workflows/: ci.yaml
assets/: license.md
benches/: full_app.rs
crates/avian_steam_audio/: Cargo.toml
crates/avian_steam_audio/src/: lib.rs  trimesh_builder.rs
crates/bevy_steam_audio/: Cargo.toml
crates/bevy_steam_audio/src/: debug.rs  lib.rs  probes.rs  settings.rs  simulation.rs  sources.rs
crates/bevy_steam_audio/src/nodes/: decoder.rs  encoder.rs  mod.rs  reverb.rs
crates/bevy_steam_audio/src/scene/: mesh_backend.rs  mod.rs
crates/bevy_steam_audio/src/wrapper/: channel_ptrs.rs  coordinate_system.rs  material.rs  mesh.rs  mod.rs  transform.rs
crates/trenchbroom_steam_audio/: Cargo.toml
crates/trenchbroom_steam_audio/src/: lib.rs
examples/: Cargo.toml  configuration.rs  gltf.rs  manual_node_setup.rs  minimal.rs  reverb.rs  spatial.rs
examples/assets/maps/: trenchbroom_demo.map
examples/benches/: full_app.rs
examples/examples/: avian.rs  configuration.rs  gltf.rs  manual_node_setup.rs  many.rs  minimal.rs  reverb.rs  spatial.rs  trenchbroom.rs
examples/examples/util/: camera_controller.rs  mod.rs
examples/util/: camera_controller.rs
integration/avian_steam_audio/src/: lib.rs
src/: audio.rs  backend.rs  decoder.rs  encoder.rs  lib.rs  mesh_backend.rs  probes.rs  settings.rs  simulation.rs  sources.rs  wrapper.rs
src/nodes/: decoder.rs  encoder.rs  mod.rs  reverb.rs
src/scene/: backend.rs  mesh_backend.rs  mod.rs  trimesh.rs
src/wrapper/: channel_ptrs.rs  coordinate_system.rs  material.rs  mesh.rs  mod.rs
