[package]
name = "bevy_steam_audio"
description = "Integration between bevy_seedling and Steam Audio over audionimbus"
version = "0.1.0"
edition = "2024"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/janhohenheim/bevy_steam_audio"
readme = "readme.md"
exclude = ["./assets/"]

[features]
auto-install = ["audionimbus/auto-install"]

[dependencies]
audionimbus = { version = "0.8.3", path = "../audionimbus/audionimbus",  default-features = false }
audionimbus-sys = { version = "4.7.1-rc.1", path = "../audionimbus/audionimbus-sys", default-features = false }

bevy_seedling = { git = "https://github.com/corvusprudens/bevy_seedling", branch = "v0.6.0", default-features = false }
bevy_app = { version = "0.17.0-rc.1", default-features = false }
bevy_ecs = { version = "0.17.0-rc.1", default-features = false }
bevy_transform = { version = "0.17.0-rc.1", default-features = false }
bevy_math = { version = "0.17.0-rc.1", default-features = false }
bevy_utils = { version = "0.17.0-rc.1", default-features = false }
bevy_log = { version = "0.17.0-rc.1", default-features = false }
bevy_reflect = { version = "0.17.0-rc.1", default-features = false }
bevy_derive = { version = "0.17.0-rc.1", default-features = false }
bevy_platform = { version = "0.17.0-rc.1", default-features = false }
bevy_asset = { version = "0.17.0-rc.1", default-features = false }
bevy_mesh = { version = "0.17.0-rc.1", default-features = false }
bevy_time = { version = "0.17.0-rc.1", default-features = false }
bevy_tasks = { version = "0.17.0-rc.1", default-features = false }

itertools = "0.14.0"
firewheel = { version = "0.8.0-rc.1", default-features = false, features = ["std"] }
crossbeam-channel = "0.5.15"

[dev-dependencies]
bevy = { version = "0.17.0-rc.1", default-features = false, features = [
  "std",
  "async_executor",
  "android-game-activity",
  "android_shared_stdcxx",
  "animation",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_post_process",
  "bevy_anti_alias",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_input_focus",
  "bevy_log",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_image",
  "bevy_mesh",
  "bevy_camera",
  "bevy_light",
  "bevy_shader",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_sprite_render",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_ui_render",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "ktx2",
  "multi_threaded",
  "png",
  "reflect_auto_register",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "webgl2",
  "x11",
  "wayland",
  "debug",
  "zstd_rust",
  "dynamic_linking"
] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev.package."*"]
inherits = "dev"
opt-level = 3

[profile.dev]
opt-level = 0

[patch.crates-io]
firewheel = { git = "https://github.com/corvusprudens/firewheel", branch = "freeverb" }
