[workspace]
members = [
    "integration/*",
    "examples",
]

[[example]]
name = "minimal"
path = "examples/examples/minimal.rs"

[[example]]
name = "avian"
path = "examples/examples/avian.rs"


[package]
name = "bevy_steam_audio"
description = "Integration between bevy_seedling and Steam Audio over audionimbus"
version = "0.1.0"
edition = "2024"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/janhohenheim/bevy_steam_audio"
readme = "readme.md"
exclude = ["./assets/"]

[features]
auto-install = ["audionimbus/auto-install"]

[dependencies]
audionimbus = { version = "0.9.0", default-features = false }
audionimbus-sys = { version = "4.7.1-rc.1",  default-features = false }

bevy_seedling = { workspace = true }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_transform = { workspace = true }
bevy_math = { workspace = true }
bevy_utils = { workspace = true }
bevy_log = { workspace = true }
bevy_reflect = { workspace = true }
bevy_derive = { workspace = true }
bevy_platform = { workspace = true }
bevy_asset = { workspace = true }
bevy_mesh = { workspace = true }
bevy_time = { workspace = true }
bevy_tasks = { workspace = true }
bevy_camera = { workspace = true }

itertools = { workspace = true }
firewheel = { workspace = true }
crossbeam-channel = { workspace = true }
prealloc_ref_vec = { workspace = true }


[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "full_app"
harness = false

[profile.dev.package."*"]
inherits = "dev"
opt-level = 3

[profile.dev]
opt-level = 0

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true


[workspace.dependencies]
bevy_steam_audio = { version = "0.1.0", path = "." }
avian_steam_audio = { version = "0.1.0", path = "integration/avian_steam_audio" }

audionimbus = { version = "0.9.0", default-features = false }
audionimbus-sys = { version = "4.7.1-rc.1",  default-features = false }

bevy_seedling = { version = "0.6.0", default-features = false }
bevy_app = { version = "0.17", default-features = false }
bevy_ecs = { version = "0.17", default-features = false }
bevy_transform = { version = "0.17", default-features = false }
bevy_math = { version = "0.17", default-features = false }
bevy_utils = { version = "0.17", default-features = false }
bevy_log = { version = "0.17", default-features = false }
bevy_reflect = { version = "0.17", default-features = false }
bevy_derive = { version = "0.17", default-features = false }
bevy_platform = { version = "0.17", default-features = false }
bevy_asset = { version = "0.17", default-features = false }
bevy_mesh = { version = "0.17", default-features = false }
bevy_time = { version = "0.17", default-features = false }
bevy_tasks = { version = "0.17", default-features = false }
bevy_camera = { version = "0.17", default-features = false }

avian3d = { version = "0.4", default-features = false, features = ["3d"] }

itertools = "0.14.0"
firewheel = { version = "0.8.0-rc.1", default-features = false, features = ["std"] }
crossbeam-channel = "0.5.15"
prealloc_ref_vec = "0.1.1"

bevy = { version = "0.17.0", default-features = false, features = [
  "std",
  "async_executor",
  "android-game-activity",
  "animation",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_post_process",
  "bevy_anti_alias",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_input_focus",
  "bevy_log",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_image",
  "bevy_mesh",
  "bevy_camera",
  "bevy_light",
  "bevy_shader",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_sprite_render",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_ui_render",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "ktx2",
  "multi_threaded",
  "png",
  "reflect_auto_register",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "webgl2",
  "x11",
  "wayland",
  "debug",
  "zstd_rust",
  "dynamic_linking"
] }


[workspace.lints.rust]
#missing_docs = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
needless_lifetimes = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
nonstandard_macro_braces = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
too_long_first_doc_paragraph = "allow"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[patch.crates-io]
firewheel = { git = "https://github.com/BillyDM/firewheel" }
bevy_seedling = { git = "https://github.com/corvusprudens/bevy_seedling", branch = "v0.6.0" }
