[package]
name = "steam_audio_examples"
description = "Examples for Bevy + Steam Audio"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy_steam_audio = { workspace = true }
avian_steam_audio = { workspace = true }
bevy = { workspace = true }
bevy_seedling = { workspace = true }
avian3d = { workspace = true, features = ["f32"] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
