[package]
name = "avian_steam_audio"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_steam_audio = { workspace = true }
bevy_seedling = { workspace = true }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_transform = { workspace = true }
bevy_math = { workspace = true }
bevy_utils = { workspace = true }
bevy_log = { workspace = true }
bevy_reflect = { workspace = true }
bevy_derive = { workspace = true }
bevy_platform = { workspace = true }
bevy_asset = { workspace = true }
bevy_mesh = { workspace = true }
bevy_time = { workspace = true }
bevy_tasks = { workspace = true }
bevy_camera = { workspace = true }
avian3d = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
