[package]
name = "bevy_steam_audio"
description = "Integration between bevy_seedling and Steam Audio over audionimbus"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[features]
auto-install = ["audionimbus/auto-install"]

[dependencies]
audionimbus = { version = "0.9.0", default-features = false }
audionimbus-sys = { version = "4.7.1-rc.1",  default-features = false }

bevy_seedling = { workspace = true }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_transform = { workspace = true }
bevy_math = { workspace = true }
bevy_utils = { workspace = true }
bevy_log = { workspace = true }
bevy_reflect = { workspace = true }
bevy_derive = { workspace = true }
bevy_platform = { workspace = true }
bevy_asset = { workspace = true }
bevy_mesh = { workspace = true }
bevy_time = { workspace = true }
bevy_tasks = { workspace = true }
bevy_camera = { workspace = true }

itertools = { workspace = true }
firewheel = { workspace = true }
crossbeam-channel = { workspace = true }
prealloc_ref_vec = { workspace = true }




[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
