[package]
name = "trenchbroom_steam_audio"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[features]
default = ["debug"]
debug = ["bevy_steam_audio/debug"]

[dependencies]
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_scene = { workspace = true }
bevy_mesh = { workspace = true }
bevy_asset = { workspace = true }
bevy_transform = { workspace = true }
bevy_steam_audio = { workspace = true }
avian_steam_audio = { workspace = true }
bevy_trenchbroom = { workspace = true }
wildmatch = { workspace = true }
avian3d = { workspace = true }

[dev-dependencies]
avian3d = { workspace = true, features = ["f32"]}

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
